@startuml myReads-solution-design

package src {
  class App{
    shelfList
  }
  class BookshelfList{
    allBooksList: List of all books - state
    onShelfUpdated(book, shelf)
    shelfList: names of shelfList - props
  }
  class Bookshelf{
    booksList: Books on this shelf - props
    name: name of shelf - props
    onShelfChanged - props
  }
  
  class Book{
    BookObj: - props
          -id
          -bookCover
          -title
          -author
          -currentShelf
    
    onShelfChanged(book, shelf) - props
  }
  class ChangeShelf{
    shelfList (to render menu)
    selectedShelf
    onShelfSelected - props
  }
  class AddBook{
    functional component that navigates to search page
  }
  class SearchBook{
    searchResults - state
    shelfListList - props
    allBooksList - props - to determine shelfList for search results
    onBackClicked - props
    onShelfChanged - props
  }
  class SearchInput{
    searchText - state
    onBackClicked - props
  }
}

App *--> BookshelfList
App *--> SearchBook
BookshelfList*--> Bookshelf
Bookshelf *--> Book
BookshelfList *--> AddBook
Book *--> ChangeShelf
SearchBook *--> SearchInput
SearchBook *--> Bookshelf


@enduml

